# src/main/java/com/adjt/chefmanagerapi/core/domain/entities/usuario/Administrador.java
@@ -1,21 +1,16 @@
 package com.adjt.chefmanagerapi.core.domain.entities.usuario;
 
+import com.adjt.chefmanagerapi.core.domain.entities.TipoUsuario;
 import com.adjt.chefmanagerapi.core.domain.valueobjects.Endereco;
-import com.adjt.chefmanagerapi.core.domain.valueobjects.CategoriaUsuario;
 
 import java.util.UUID;
 
 public class Administrador extends Usuario {
-    public Administrador(String nome, String email, String login, String senha, Endereco endereco) {
-        super(nome, email, login, senha, endereco);
+    public Administrador(String nome, String email, String login, String senha, Endereco endereco, TipoUsuario tipoUsuario) {
+        super(nome, email, login, senha, endereco, tipoUsuario);
     }
 
-    public Administrador(UUID id, String nome, String email, String login, String senha, Endereco endereco) {
-        super(id, nome, email, login, senha, endereco);
-    }
-
-    @Override
-    public CategoriaUsuario getTipo() {
-        return CategoriaUsuario.ADMIN;
+    public Administrador(UUID id, String nome, String email, String login, String senha, Endereco endereco, TipoUsuario tipoUsuario) {
+        super(id, nome, email, login, senha, endereco, tipoUsuario);
     }
 }
