# src/main/java/com/adjt/chefmanagerapi/infrastructure/dataprovider/usuario/UsuarioPersistenceMapper.java
@@ -13,7 +13,8 @@ public interface UsuarioPersistenceMapper {
             @Mapping(source = "endereco.numero", target = "numero"),
             @Mapping(source = "endereco.cidade", target = "cidade"),
             @Mapping(source = "endereco.cep", target = "cep"),
-            @Mapping(source = "endereco.uf", target = "uf")
+            @Mapping(source = "endereco.uf", target = "uf"),
+            @Mapping(source = "tipo.id", target = "tipoUsuarioId")
     })
     UsuarioEntity toEntity(UsuarioGatewayDTO usuario);
 
@@ -23,7 +24,10 @@ public interface UsuarioPersistenceMapper {
             @Mapping(source = "cidade", target = "endereco.cidade"),
             @Mapping(source = "cep", target = "endereco.cep"),
             @Mapping(source = "uf", target = "endereco.uf"),
-            @Mapping(source = "senha", target = "senha")
+            @Mapping(source = "senha", target = "senha"),
+            @Mapping(source = "tipo.id", target = "tipo.id"),
+            @Mapping(source = "tipo.nome", target = "tipo.nome"),
+            @Mapping(source = "tipo.categoriaUsuario", target = "tipo.categoriaUsuario")
     })
     UsuarioGatewayDTO toDto(UsuarioEntity entity);
 }
