# src/main/resources/static/openapi_v1.yaml
@@ -543,11 +543,7 @@ components:
           example: secret123
         tipo:
           type: string
-          description: Tipo de usuário
-          enum:
-          - CLIENTE
-          - DONO_RESTAURANTE
-          - ADMIN
+          format: uuid
         endereco:
           $ref: '#/components/schemas/EnderecoRequest'
       required:
@@ -570,7 +566,15 @@ components:
         login:
           type: string
         tipo:
-          type: string
+          type: object
+          properties:
+            id:
+              type: string
+              format: uuid
+            nome:
+              type: string
+            categoriaUsuario:
+              type: string
         endereco:
           $ref: '#/components/schemas/EnderecoResponse'
         dataUltimaAlteracao:
@@ -650,11 +654,7 @@ components:
           type: string
         tipo:
           type: string
-          description: Tipo de perfil do usuário
-          enum:
-          - CLIENTE
-          - DONO_RESTAURANTE
-          - ADMIN
+          format: uuid
         endereco:
           $ref: '#/components/schemas/EnderecoRequest'
       required:
